--- a/about.html
+++ b/about.html
@@ -10,17 +10,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/icoder/">icoder</a>
+          <a class="navbar-brand" href="/project/">icoder</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/icoder/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/project/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/icoder/about.html">About</a>
+                <a class="nav-link active" href="/project/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Topic</a>
@@ -37,7 +37,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/icoder/contact.html">Contact Us</a>
+                <a class="nav-link active" href="/project/contact.html">Contact Us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
