--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/icoder/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/project/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/icoder/about.html">About</a>
+                <a class="nav-link active" href="/project/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Topic</a>
@@ -37,7 +37,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/icoder/contact.html">Contact Us</a>
+                <a class="nav-link active" href="/project/contact.html">Contact Us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
